--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <link rel="manifest" href="/manifest.webmanifest">
+    <link rel="icon" type="image/svg+xml" href="/icons/icon-512x512.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#4f46e5">
-    <meta name="description" content="Aplicativo de agenda pessoal para gerenciar suas tarefas">
-    <link rel="apple-touch-icon" href="/icons/icon-192x192.png">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <title>Agenda Pessoal</title>
+    <meta name="theme-color" content="#4f46e5" />
+    <meta name="description" content="Aplicativo de agenda pessoal para gerenciar suas tarefas" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-title" content="Minha Agenda" />
+    <link rel="apple-touch-icon" href="/icons/icon-192x192.png" />
+    <link rel="mask-icon" href="/icons/icon-512x512.svg" color="#4f46e5" />
+    <title>Minha Agenda</title>
   </head>
   <body>
     <div id="root"></div>
